[tool.poetry]
name = "influxpingscan"
version = "0.1.0"
description = ""
authors = ["Kieran Gee <kieran.lost.the.game@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
ping3 = "^4.0.8"

[tool.poetry.dev-dependencies]
ruff = "*"
pylance = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
